hphp/hack/test/pocket_universes/naming/not_in_class.bad.php
<?hh // strict

interface Foo {
  enum E {
    case string name;

    :@A (
      name = "A"
      );
  }
}
